force-app/main/default/objects/Graphics_Pack_Example__c/Graphics_Pack_Example__c.object-meta.xml
<CustomObject>
    <description>Example object to show how Graphics could be used</description>
    <label>Graphics Pack Example</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graphics Pack Examples</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>