force-app/main/default/objects/Graphics_Pack_Example__c/fields/First_3_awards__c.field-meta.xml
<CustomField>
    <fullName>First_3_awards__c</fullName>
    <formula>CASE( First_3_positions__c ,
&quot;Gold&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxb3&quot;,&quot;Gold&quot;,16,16), 
&quot;Silver&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxb6&quot;,&quot;Silver&quot;,16,16),
&quot;Bronze&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxb0&quot;,&quot;Bronze&quot;,16,16),
 &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First 3 Awards</label>
    <type>Text</type>
</CustomField>