force-app/main/default/objects/Graphics_Pack_Example__c/fields/First_3_positions__c.field-meta.xml
<CustomField>
    <fullName>First_3_positions__c</fullName>
    <label>First 3 Positions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
                <default>true</default>
                <label>Bronze</label>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>