force-app/main/default/objects/Graphics_Pack_Example__c/fields/Out_of_3_currency__c.field-meta.xml
<CustomField>
    <fullName>Out_of_3_currency__c</fullName>
    <formula>IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxYZ&quot;, &quot;£&quot;, 16, 16),&quot;&quot;)
 +
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 1, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxYY&quot;, &quot;€&quot;, 16, 16),&quot;&quot;)
+
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 2, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxYX&quot;, &quot;$&quot;, 16, 16),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of 3 Currency</label>
    <type>Text</type>
</CustomField>