force-app/main/default/objects/Graphics_Pack_Example__c/fields/Out_of_3_lightbulbs__c.field-meta.xml
<CustomField>
    <fullName>Out_of_3_lightbulbs__c</fullName>
    <formula>IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdW&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdX&quot;, &quot;-&quot;, 16, 16))
 +
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 1, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdW&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdX&quot;, &quot;-&quot;, 16, 16))
+
IF ( VALUE(TEXT(Out_of_3_rating__c)) &gt; 2, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdW&quot;, &quot;*&quot;, 16, 16), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxdX&quot;, &quot;-&quot;, 16, 16))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of 3 Lightbulbs</label>
    <type>Text</type>
</CustomField>