force-app/main/default/objects/Graphics_Pack_Example__c/fields/Out_of_3_rating__c.field-meta.xml
<CustomField>
    <fullName>Out_of_3_rating__c</fullName>
    <description>How many out of 3? 3 being best 0 being worst.</description>
    <label>Out of 3 Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>