force-app/main/default/objects/Graphics_Pack_Example__c/fields/Out_of_5_deck_chair__c.field-meta.xml
<CustomField>
    <fullName>Out_of_5_deck_chair__c</fullName>
    <formula>IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxit&quot;, &quot;*&quot;, 16, 16),&quot;&quot;)
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 1, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxit&quot;, &quot;*&quot;, 16, 16),&quot;&quot;)
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 2, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxit&quot;, &quot;*&quot;, 16, 16),&quot;&quot;)
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 3, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxit&quot;, &quot;*&quot;, 16, 16),&quot;&quot;)
+
IF ( VALUE(TEXT(Out_of_5_rating__c)) &gt; 4, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001Hxit&quot;, &quot;*&quot;, 16, 16),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of 5 Deck Chairs</label>
    <type>Text</type>
</CustomField>