force-app/main/default/objects/Graphics_Pack_Example__c/fields/Red_Amber_Green_Bullet__c.field-meta.xml
<CustomField>
    <fullName>Red_Amber_Green_Bullet__c</fullName>
    <formula>CASE(  Red_Amber_Green__c  ,
&quot;Red&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxWF&quot;,&quot;Red&quot;,16,16),
&quot;Amber&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxWB&quot;,&quot;Amber&quot;,16,16),
&quot;Green&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxW9&quot;,&quot;Green&quot;,16,16),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Red Amber Green Bullet</label>
    <type>Text</type>
</CustomField>