force-app/main/default/objects/Graphics_Pack_Example__c/fields/Red_Amber_Green_Person__c.field-meta.xml
<CustomField>
    <fullName>Red_Amber_Green_Person__c</fullName>
    <formula>CASE( Red_Amber_Green__c ,
&quot;Red&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxaQ&quot;,&quot;Red&quot;,16,16),
&quot;Amber&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxaP&quot;,&quot;Amber&quot;,16,16),
&quot;Green&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxaO&quot;,&quot;Green&quot;,16,16),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Red Amber Green Person</label>
    <type>Text</type>
</CustomField>