force-app/main/default/objects/Graphics_Pack_Example__c/fields/Up_or_Down__c.field-meta.xml
<CustomField>
    <fullName>Up_or_Down__c</fullName>
    <label>Up or Down</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
                <default>true</default>
                <label>Up</label>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>