force-app/main/default/objects/Graphics_Pack_Example__c/fields/Up_or_Down_Arrows__c.field-meta.xml
<CustomField>
    <fullName>Up_or_Down_Arrows__c</fullName>
    <formula>CASE(  Up_or_Down__c,
&quot;Up&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxhW&quot;,&quot;Up&quot;,16,16),
&quot;Down&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001HxhU&quot;,&quot;Down&quot;,16,16),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Up or Down Arrows</label>
    <type>Text</type>
</CustomField>